# LLM-SOTA-models-reasoning-drift-study

./: .gitignore  ARMS.md  DESIGN.md  FINAL_REPORT.md  MULTI_VENDOR_ADDENDUM.md  PROMPTS.md  QUALITATIVE_FINDINGS.md  README.md  RUBRIC.md  TEMPORAL_NOISE_ADDENDUM.md  reasoning_drift_linkedin_article.md
harness/: .env.example  README.md  data.manifest.sha256  pyproject.toml
harness/config/: base.yaml  experiment.yaml
harness/config/arms/: deepseek-v4-pro-temporal.yaml  deepseek-v4-pro.yaml  gemini-3-1-pro-temporal.yaml  gemini-3-1-pro.yaml  gpt-5-5-temporal.yaml  gpt-5-5.yaml  haiku-4-5.yaml  opus-4-7-temporal.yaml  opus-4-7.yaml  sonnet-4-6-temporal.yaml  sonnet-4-6.yaml
harness/data/extracted/: c_MSFT_00_X_X_af5a558f3d83491a.jsonl  c_MSFT_25_start_peer_materials_b3400e19a53f6beb.jsonl  c_MSFT_75_end_peer_materials_4f8363d79e89b6ad.jsonl  (+3 more)
harness/scripts/: _wayback_known_captures.json  build_materials.py  compare_arms.py  cross_judge.py  drift_analysis.py  dry_run.py  fetch_temporal_sources.py  hand_screen_temporal.py  judge_sober_ranking.py  plot_drift_signatures.py  plot_opus_vs_sonnet.py  probe_api.py  probe_effort.py  quick_analysis.py  rescan_temporal.py  run_experiment.py  run_extractor.py  run_grading.py  smoke_test.py  sober_analysis.py  status.py  verify_arm_integrity.py  verify_v3_isolation.py  write_arm_lock.py
harness/src/: __init__.py  api.py  assembly.py  autograder.py  cells.py  config.py  cost.py  disambiguation.py  extractor.py  judge.py  manifest.py  materials.py  persistence.py  prompts.py  runner.py  tokens.py  validation.py
(+578 files in other folders)
