[project]
name = "reasoning-drift-harness"
version = "0.1.0"
description = "Harness for Opus 4.7 Reasoning Drift Study"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # v2 multi-vendor analyst adapters. openai also serves DeepSeek (V4 Pro
    # exposes an OpenAI-compatible endpoint at api.deepseek.com — no
    # first-party DeepSeek SDK exists).
    "openai>=1.50.0",
    "google-genai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
